Modified scss of card file

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -2,4 +2,8 @@ li {
   background-color: yellow;
   list-style-type: none;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  width: 18rem;
+  height: 18rem;
+  margin-top: 3rem;
+  text-align: center;
 }
