--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -6,4 +6,9 @@ li {
   height: 18rem;
   margin-top: 3rem;
   text-align: center;
+  border-radius: 10%;
+}
+
+.image-container {
+  padding-top: 3.5rem;
 }
